Fri Aug  2 23:13:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/ripper/eventids2.c (ripper_init_eventids2): ripper support for
	  new literals, tRATIONAL and tIMAGINARY.

Fri Aug  2 18:33:28 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Reduce power_level more than one at
	  recursion, if possible.
	  (rb_big2str1): Follow the above change.

Fri Aug  2 12:25:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Swap x and y for bary_mul1 if x is longer than y.
	  [ruby-dev:47565] [Bug #8719] Reported by Narihiro Nakamura.

Fri Aug  2 10:39:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* parse.y (negate_lit): add T_RATIONAL and T_COMPLEX to the switch
	  statement, and call rb_bug() if an unknown type is passed to
	  negate_lit(). [ruby-core:56316] [Bug #8717]

	* bootstraptest/test_literal_suffix.rb (assert_equal): add test

Fri Aug  2 09:14:47 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/refinements.rdoc:  Improve description of where you may
	  activate refinements.

Fri Aug  2 07:45:55 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_orig): Remove len argument.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Follow above change.

Thu Aug  2 02:32:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: Add the description of number literal suffixes.

Thu Aug  2 00:02:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* bootstraptest/test_literal_suffix.rb: add two test cases to
	  examine that "1if true" and "1rescue nil" are recognized as 1.

Thu Aug  1 23:45:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* rational.c (rb_flt_rationalize_with_prec): new public C function
	  to rationalize a Float instance with a precision.

	* rational.c (rb_flt_rationalize): new public C function to
	 rationalize a Float instance.  A precision is calculated from
	 the given float number.

	* include/ruby/intern.h: Add rb_flt_rationalize_with_prec and
	  rb_flt_rationalize.
